Refactor: Modernize spellbook generator (provisional)

--- a/5e_artisanal_database/licensing.html
+++ b/5e_artisanal_database/licensing.html
@@ -36,7 +36,7 @@ th, td {
   </style>
 </head>
 <body>
-<p><a href="../../index.html">5e Artisanal Database</a> → Licensing</p>
+<p><a href="./index.html">5e Artisanal Database</a> → Licensing</p>
 
   <h1>5e Artisanal Database Licensing</h1>
   <p>The 5e Artisanal Database uses the following content licenses.<p>
