Refactor: Modernize spellbook generator
- Separated spell data from generator logic for improved maintainability.
- Switched to a single source of truth for spell data, ensuring consistency.
- Refactored JavaScript for better readability and efficiency.

--- a/5e_artisanal_database/generators/spellbook/index.html
+++ b/5e_artisanal_database/generators/spellbook/index.html
@@ -43,6 +43,7 @@
     <em>Generating spellbook...</em>
 </div>
 
+<script src="../../spells/spells.js"></script>
 <script src="generator_text.js"></script>
 <script>
 // Generate initial spellbook on page load
