Create monster_combat_stats.js and improve combat tracker interface
- Added monster_combat_stats.js with all 3141 monsters including proper initiative calculations
- Updated combat tracker to use new file with reliable HTML links for all monsters
- Updated encounter calculator to use new unified combat stats
- Removed old monster-data.js file (replaced by monster_combat_stats.js)
- Cleaned up combat tracker interface: removed unnecessary labels, shortened placeholders
- Fixed text alignment in monster search input

The new system provides:
- Proper initiative values calculated from Dexterity scores
- Direct HTML links to monster stat pages (no more path guessing)
- Enhanced D&D 2024 monster data with combat tracker fields
- Unified data source for both combat tools

--- a/5e_artisanal_database/tools/encounter_calculator/index.html
+++ b/5e_artisanal_database/tools/encounter_calculator/index.html
@@ -234,7 +234,7 @@ input, select, .monster-search {
 }
 </style>
 <title>5e Encounter Calculator</title>
-<script src="../../css_js/monster-data.js"></script>
+<script src="../../css_js/monster_combat_stats.js"></script>
 <script src="../../css_js/monster-lookup.js"></script>
 </head>
 <body>
@@ -403,8 +403,8 @@ let availableMonsters = [];
 // Load monsters from main database and merge with combat tracker data
 function initializeMonsterData() {
     try {
-        if (typeof monsterData !== 'undefined' && Array.isArray(monsterData)) {
-            availableMonsters = monsterData.map(monster => {
+        if (typeof monsterCombatStats !== 'undefined' && Array.isArray(monsterCombatStats)) {
+            availableMonsters = monsterCombatStats.map(monster => {
                 return {
                     name: monster.name,
                     cr: monster.cr,
@@ -418,7 +418,7 @@ function initializeMonsterData() {
             MonsterLookup.populateGlobalSourceFilter(availableMonsters);
             MonsterLookup.updateAllInstances(availableMonsters);
         } else {
-            throw new Error('monsterData not available');
+            throw new Error('monsterCombatStats not available');
         }
     } catch (error) {
         console.error('Monster data not available:', error);
