--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<link rel="manifest" href="./manifest.json">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
