Fixed GP values in the 2024 Treasure Generator

--- a/5e_artisanal_database/generators/2024_dnd_treasure/index.html
+++ b/5e_artisanal_database/generators/2024_dnd_treasure/index.html
@@ -8,6 +8,7 @@
 <body>
 <div><a href="../../index.html">5e Artisanal Database</a> → D&D 2024 Treasure Generator</div>
 <h1>D&D 2024 Treasure Generator</h1>
+<p>Build on treasure distribution tables in the 2024 Dungeon Master's Guide. Includes all items from the Dungeon Master's Guide but only SRD items are linked.</p>
 
 <select id="tier">
   <option value="tier1">1st–4th Level</option>
