Add custom monster system with improved filtering and display features
- Add custom monster directory with 8 Forge of Foes stat blocks
- Implement JavaScript-based monster index with dynamic filtering
- Add type field to monster combat stats for better categorization
- Update monster index to display fractions for CR values (1/8, 1/4, 1/2)
- Set filters to collapsed by default with automatic filtering on checkbox change
- Create unified custom monster system using consistent monsterMarkdown variable
- Add raw markdown display option for easy copying and editing
- Integrate custom monsters into encounter calculator and combat tracker
- Update build scripts to generate dynamic monster index from combat stats
- Refactor type extraction to show base creature types (Humanoid vs Medium Humanoid)

--- a/5e_artisanal_database/tools/encounter_calculator/index.html
+++ b/5e_artisanal_database/tools/encounter_calculator/index.html
@@ -235,6 +235,7 @@ input, select, .monster-search {
 </style>
 <title>5e Encounter Calculator</title>
 <script src="../../css_js/monster_combat_stats.js"></script>
+<script src="../../monsters/custom/custom_monster_index.js"></script>
 <script src="../../css_js/monster-lookup.js"></script>
 </head>
 <body>
@@ -404,7 +405,13 @@ let availableMonsters = [];
 function initializeMonsterData() {
     try {
         if (typeof monsterCombatStats !== 'undefined' && Array.isArray(monsterCombatStats)) {
-            availableMonsters = monsterCombatStats.map(monster => {
+            // Combine main monsters with custom monsters
+            const allMonsterData = [...monsterCombatStats];
+            if (typeof customMonsterCombatStats !== 'undefined' && Array.isArray(customMonsterCombatStats)) {
+                allMonsterData.push(...customMonsterCombatStats);
+            }
+            
+            availableMonsters = allMonsterData.map(monster => {
                 return {
                     name: monster.name,
                     cr: monster.cr,
