Updated index page description

--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -127,13 +127,9 @@ document.addEventListener('DOMContentLoaded', function() {
 
 <h2>About the 5e Artisanal Database</h2>
 
-<p>The 5e Artisanal Database is a database of open-licensed content for your 5e-based tabletop roleplaying games. Mobile friendly, downloadable, and self-hostable using your own web server or locally using your own web browser. <a href="5e_artisanal_database.zip">Download your own copy</a>.</p>
+<p>The 5e Artisanal Database is a set of tools, generators, and <a href="./licensing.html">open-licensed</a> rules, monsters, items, and spells to help you run 5e-based tabletop roleplaying games. It's mobile friendly, downloadable, and self-hostable using your own web server or locally using your own web browser. <a href="5e_artisanal_database.zip">Download your own copy</a>.</p>
 
-<p>The 5e Artisanal Database is a feature for <a href="https://www.patreon.com/c/slyflourish">Patreons of Sly Flourish</a>. If you are not a patron, please <a href="https://www.patreon.com/c/slyflourish">join up</a> to support this work and get access to a whole lot more.</a>
-
-<h2>Sources</h2>
-<p>The 5e Artisanal Database collects rules and tools for several openly-released 5e roleplaying game systems including the <a href="./srds/SRD_CC_v5.1.pdf">D&D 2014 5.1 SRD</a>, the <a href="./srds/SRD_CC_v5.2.1.pdf">D&D 2024 5.2 SRD</a>, <a href="https://a5esrd.com/a5esrd">Level Up Advanced 5e</a>, <a href="https://koboldpress.com/kpstore/product/tome-of-beasts-1-2023-edition/">Tome of Beasts 1</a>, <a href="https://koboldpress.com/tome-of-beasts-2/">2</a>, <a href="https://koboldpress.com/kpstore/product/tome-of-beasts-3-for-5th-edition/">3</a>, the <a href="https://koboldpress.com/kpstore/product/creature-codex-for-5th-edition-dnd/">Creature Codex</a>, the <a href="./srds/Black-Flag-Roleplaying.pdf">Kobold Press Black Flag SRD</a>, the <a href="https://slyflourish.com/lazy_gm_resource_document.html">Lazy GM's Resource Document</a>, and the <a href="https://slyflourish.com/lazy_5e_monster_building_resource_document.html">Lazy GM's Monster Resource Document</a>. See <a href="./licensing.html">Licensing</a> for license details.</p>
-
+<p>The 5e Artisanal Database is a reward for <a href="https://www.patreon.com/c/slyflourish">Patreons of Sly Flourish</a>. If you are not a patron, please <a href="https://www.patreon.com/c/slyflourish">join up</a> to support this work and get access to a whole lot more.</a>
 
 </body>
 </html>
