Updated index and README

--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -127,7 +127,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 <h2>About the 5e Artisanal Database</h2>
 
-<p>The 5e Artisanal Database is a set of tools, generators, and <a href="./licensing.html">open-licensed</a> rules, monsters, items, and spells to help you run 5e-based tabletop roleplaying games. It's mobile friendly, downloadable, and self-hostable using your own web server or locally using your own web browser. <a href="5e_artisanal_database.zip">Download your own copy</a>.</p>
+<p>The 5e Artisanal Database is a set of tools, generators, and <a href="./licensing.html">open-licensed</a> rules, monsters, items, and spells to help you run 5e-based tabletop roleplaying games. It's mobile friendly, downloadable, and self-hostable using your own web server or locally using your own web browser. <a href="5e_artisanal_database.zip">Download your own copy</a> and read the <a href="README.md">README.md</a> file for technical details.</p>
 
 <p>The 5e Artisanal Database is a reward for <a href="https://www.patreon.com/c/slyflourish">Patreons of Sly Flourish</a>. If you are not a patron, please <a href="https://www.patreon.com/c/slyflourish">join up</a> to support this work and get access to a whole lot more.</a>
 
