Updated CSS and stylings for the tools

--- a/5e_artisanal_database/tools/annotator/index.html
+++ b/5e_artisanal_database/tools/annotator/index.html
@@ -7,18 +7,17 @@ Learn about the licensing of the data of this tool in the license.html file loca
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
+<link rel="stylesheet" href="../../css_js/5eadb.css">
 <style>
+/* Map Annotator specific overrides */
 body {
     max-width: 1200px;
-    margin: auto;
     font-size: 16px;
-    font-family: sans-serif;
-    padding: 10px;
     background-color: white;
     color: black;
 }
 
-/* Prevent iOS zoom on inputs */
+/* Prevent iOS zoom on inputs - override shared CSS */
 input, button, select, textarea {
     font-size: 16px !important;
 }
@@ -65,7 +64,6 @@ input, button, select, textarea {
     color: white;
     border: none;
     padding: 6px 10px;
-    cursor: pointer;
     font-size: 24px;
 }
 
@@ -218,7 +216,6 @@ input, button, select, textarea {
     color: white;
     border: none;
     padding: 8px 12px;
-    cursor: pointer;
     font-size: 24px;
     border-radius: 4px;
 }
@@ -848,7 +845,6 @@ document.addEventListener('DOMContentLoaded', function() {
 document.addEventListener('wheel', handleMouseWheel, { passive: false });
 </script>
 
-<p>This tool is released under a <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal</a> license. You can copy, modify, and distribute this tool, even for commercial purposes, all without asking permission.</p>
 <p>No images are saved to any server when using this tool. All file manipulation happens in your local web browser.</p>
 
 </body>
