--- a/5e_artisanal_database/tools/encounter_calculator/index.html
+++ b/5e_artisanal_database/tools/encounter_calculator/index.html
@@ -10,34 +10,12 @@ Learn about the licensing of the data of this tool in the license.html file loca
 <meta name="viewport" content="user-scalable=yes, width=device-width">
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
+<link rel="stylesheet" href="../../css_js/5eadb.css">
 <style>
-/* Base Styles */
-body {
-    max-width: 800px;
-    margin: auto;
-    font-size: 18px;
-    font-family: sans-serif;
-    padding: 10px;
-}
-p, li {
-    line-height: 1.5em;
-}
-ul, ol {
-    padding-left: 20px;
-    margin-left: 0;
-}
-li {
-    margin-left: 0;
-}
+/* Encounter Calculator Specific Styles */
 table {
-    border-collapse: collapse;
     width: 100%;
     margin: 10px 0;
-}
-th, td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: left;
 }
 th {
     background-color: #f0f0f0;
@@ -239,7 +217,7 @@ input, select, .monster-search {
 <script src="../../css_js/monster-lookup.js"></script>
 </head>
 <body>
-<p><a href="../../index.html">5e Artisanal Database</a> > 5e Encounter Calculator</p>
+<p><a href="../../index.html">5e Artisanal Database</a> → 5e Encounter Calculator</p>
 
 <h1>5e Encounter Calculator</h1>
 
